[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/shield_blue.png" type="Texture" id=1]
[ext_resource path="res://assets/space_ship_b_small.png" type="Texture" id=2]
[ext_resource path="res://assets/play_button_a.png" type="Texture" id=3]
[ext_resource path="res://assets/DroidSans-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/shield_over_b.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 1
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreCounter" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="MarginContainer/ScoreCounter"]
margin_top = 11.0
margin_right = 410.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ScoreCounter"]
margin_left = 414.0
margin_right = 414.0
margin_bottom = 41.0

[node name="ShieldBar" type="TextureProgress" parent="MarginContainer/ScoreCounter"]
margin_left = 418.0
margin_right = 828.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/ScoreCounter"]
margin_left = 832.0
margin_right = 984.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L1" type="TextureRect" parent="MarginContainer/ScoreCounter/LivesCounter"]
margin_right = 48.0
margin_bottom = 41.0
texture = ExtResource( 2 )

[node name="L2" type="TextureRect" parent="MarginContainer/ScoreCounter/LivesCounter"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 41.0
texture = ExtResource( 2 )

[node name="L3" type="TextureRect" parent="MarginContainer/ScoreCounter/LivesCounter"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 41.0
texture = ExtResource( 2 )

[node name="StartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -32.5
margin_right = 124.5
margin_bottom = 32.5
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
